--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,3 +5,6 @@ spring:
     username: chat_room
     password: Chat_room
     driver-class-name: com.mysql.cj.jdbc.Driver
+
+chat-room-service:
+  ui-url: http://localhost:4200
